# EpiKodi

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: build.yml
docs/: TECHNICAL_GUIDE.md  USER_GUIDE.md
include/components/: file_explorer.hpp  media_controls.hpp  media_list.hpp
include/core/: app.hpp  application.hpp  menu.hpp
include/media/: folder_parser.hpp  media_file.hpp  media_player.hpp  player.hpp
include/ui/: audio_page.hpp  console_ui.hpp  fullscreen_page.hpp  image_page.hpp  main_window.hpp  menu_page.hpp  qt_ui.hpp  settings_page.hpp  ui_manager.hpp  video_page.hpp
scripts/: test_media.sh
src/: main.cpp  main_console.cpp
src/components/: file_explorer.cpp  media_controls.cpp  media_list.cpp  media_player.cpp
src/core/: app.cpp  application.cpp  menu.cpp
src/media/: folder_parser.cpp  media_file.cpp  media_player.cpp  player.cpp
src/ui/: audio_page.cpp  console_ui.cpp  fullscreen_page.cpp  image_page.cpp  main_window.cpp  menu_page.cpp  qt_ui.cpp  settings_page.cpp  video_page.cpp
tests/: test_parser.cpp  test_player.cpp
